LPS-28625 DL Display not showing correct number of documents per page on configuration change

--- a/portal-web/docroot/html/portlet/document_library/view_file_entries.jspf
+++ b/portal-web/docroot/html/portlet/document_library/view_file_entries.jspf
@@ -59,17 +59,18 @@
 			}
 			else {
 				if (mergedView) {
+					total = DLAppServiceUtil.getFoldersAndFileEntriesAndFileShortcutsCount(repositoryId, folderId, status, true);
+
+					searchContainer.setTotal(total);
+
 					results = DLAppServiceUtil.getFoldersAndFileEntriesAndFileShortcuts(repositoryId, folderId, status, true, searchContainer.getStart(), searchContainer.getEnd());
 				}
 				else {
-					results = DLAppServiceUtil.getFileEntriesAndFileShortcuts(repositoryId, folderId, status, searchContainer.getStart(), searchContainer.getEnd());
-				}
-
-				if (mergedView) {
-					total = DLAppServiceUtil.getFoldersAndFileEntriesAndFileShortcutsCount(repositoryId, folderId, status, true);
-				}
-				else {
 					total = DLAppServiceUtil.getFileEntriesAndFileShortcutsCount(repositoryId, folderId, status);
+
+					searchContainer.setTotal(total);
+
+					results = DLAppServiceUtil.getFileEntriesAndFileShortcuts(repositoryId, folderId, status, searchContainer.getStart(), searchContainer.getEnd());
 				}
 			}
 
