LPS-29041 Path doesn't return with correct protocol

--- a/portal-web/docroot/html/common/themes/top_js.jspf
+++ b/portal-web/docroot/html/common/themes/top_js.jspf
@@ -250,7 +250,7 @@
 
 		String alloyRootPath = javaScriptRootPath + "/aui/";
 
-		String alloyBaseURL = PortalUtil.getPortalURL(request) + alloyRootPath;
+		String alloyBaseURL = PortalUtil.getPortalURL(request, themeDisplay.isSecure()) + alloyRootPath;
 
 		String alloyComboPath = PortalUtil.getStaticResourceURL(request, themeDisplay.getCDNDynamicResourcesHost() + themeDisplay.getPathContext() + "/combo/", "minifierType=", javaScriptLastModified);
 		%>
