LPS-27067 Deleted Author name is escaped twice in Web Content

--- a/portal-web/docroot/html/portlet/journal/article_columns.jspf
+++ b/portal-web/docroot/html/portlet/journal/article_columns.jspf
@@ -38,7 +38,7 @@ row.addText(dateFormatDateTime.format(curArticle.getDisplayDate()), rowURL);
 
 // Author
 
-row.addText(HtmlUtil.escape(PortalUtil.getUserName(curArticle.getUserId(), curArticle.getUserName())), rowURL);
+row.addText(PortalUtil.getUserName(curArticle), rowURL);
 
 // Action
 
