--- a/portal-web/docroot/html/portlet/asset_publisher/asset_metadata.jspf
+++ b/portal-web/docroot/html/portlet/asset_publisher/asset_metadata.jspf
@@ -46,9 +46,7 @@ for (int j = 0; j < metadataFields.length; j++) {
 		value = LanguageUtil.get(pageContext, "priority") + StringPool.COLON + StringPool.SPACE + assetEntry.getPriority();
 	}
 	else if (metadataFields[j].equals("author")) {
-		String userName = PortalUtil.getUserName(assetRenderer.getUserId(), assetRenderer.getUserName());
-
-		value = LanguageUtil.get(pageContext, "by") + StringPool.SPACE + HtmlUtil.escape(userName);
+		value = LanguageUtil.get(pageContext, "by") + StringPool.SPACE + PortalUtil.getUserName(assetRenderer);
 	}
 	else if (metadataFields[j].equals("view-count")) {
 		int viewCount = assetEntry.getViewCount();
