--- a/portal-web/docroot/html/portlet/asset_publisher/select_asset.jspf
+++ b/portal-web/docroot/html/portlet/asset_publisher/select_asset.jspf
@@ -108,9 +108,7 @@ portletURL.setParameter("typeSelection", typeSelection);
 
 			// User name
 
-			String userName = PortalUtil.getUserName(assetRenderer.getUserId(), assetRenderer.getUserName());
-
-			row.addText(HtmlUtil.escape(userName), rowHREF);
+			row.addText(PortalUtil.getUserName(assetRenderer), rowHREF);
 
 			// Modified date
 
