--- a/portal-web/docroot/html/portlet/document_library/action/delete.jspf
+++ b/portal-web/docroot/html/portlet/document_library/action/delete.jspf
@@ -22,7 +22,7 @@
 					<portlet:actionURL var="deleteURL">
 						<portlet:param name="struts_action" value="/document_library/edit_file_entry" />
 						<portlet:param name="<%= Constants.CMD %>" value="<%= Constants.MOVE_TO_TRASH %>" />
-						<portlet:param name="redirect" value="<%= viewFolderURL.toString() %>" />
+						<portlet:param name="redirect" value="<%= currentURL %>" />
 						<portlet:param name="fileEntryId" value="<%= String.valueOf(fileEntry.getFileEntryId()) %>" />
 					</portlet:actionURL>
 
@@ -35,7 +35,7 @@
 					<portlet:actionURL var="deleteURL">
 						<portlet:param name="struts_action" value="/document_library/edit_file_entry" />
 						<portlet:param name="<%= Constants.CMD %>" value="<%= Constants.DELETE %>" />
-						<portlet:param name="redirect" value="<%= viewFolderURL.toString() %>" />
+						<portlet:param name="redirect" value="<%= currentURL %>" />
 						<portlet:param name="fileEntryId" value="<%= String.valueOf(fileEntry.getFileEntryId()) %>" />
 					</portlet:actionURL>
 
@@ -51,7 +51,7 @@
 			<portlet:actionURL var="deleteShortcutURL">
 				<portlet:param name="struts_action" value="/document_library/edit_file_shortcut" />
 				<portlet:param name="<%= Constants.CMD %>" value="<%= TrashUtil.isTrashEnabled(themeDisplay.getScopeGroupId()) ? Constants.MOVE_TO_TRASH : Constants.DELETE %>" />
-				<portlet:param name="redirect" value="<%= viewFolderURL.toString() %>" />
+				<portlet:param name="redirect" value="<%= currentURL %>" />
 				<portlet:param name="fileShortcutId" value="<%= String.valueOf(fileShortcut.getFileShortcutId()) %>" />
 			</portlet:actionURL>
 
