LPS-27159 Source formatting

--- a/portal-web/docroot/html/portlet/bookmarks/display_settings.jspf
+++ b/portal-web/docroot/html/portlet/bookmarks/display_settings.jspf
@@ -53,9 +53,7 @@
 
 				List leftList = new ArrayList();
 
-				for (int i = 0; i < folderColumns.length; i++) {
-					String folderColumn = folderColumns[i];
-
+				for (String folderColumn : folderColumns) {
 					leftList.add(new KeyValuePair(folderColumn, LanguageUtil.get(pageContext, folderColumn)));
 				}
 
