LPS-33566 Add organization site check

--- a/portal-web/docroot/html/portlet/announcements/entry_select_scope.jspf
+++ b/portal-web/docroot/html/portlet/announcements/entry_select_scope.jspf
@@ -28,7 +28,7 @@
 
 			<%
 			for (Group group : groups) {
-				if (group.isRegularSite() && GroupPermissionUtil.contains(permissionChecker, group.getGroupId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
+				if ((group.isRegularSite() || (group.isOrganization() && group.isSite())) && GroupPermissionUtil.contains(permissionChecker, group.getGroupId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
 			%>
 
 					<aui:option label="<%= HtmlUtil.escape(group.getDescriptiveName(locale)) %>" selected="<%= classPK == group.getGroupId() %>" value="<%= PortalUtil.getClassNameId(Group.class) + StringPool.COMMA + group.getGroupId() %>" />
