--- a/portal-web/docroot/html/portlet/announcements/entry_select_scope.jspf
+++ b/portal-web/docroot/html/portlet/announcements/entry_select_scope.jspf
@@ -13,9 +13,17 @@
  * details.
  */
 --%>
+<%
+	boolean hasDistributionScope = false;
+%>
 
 <aui:select changesContext="<%= submitOnChange %>" name="distributionScope" onChange='<%= submitOnChange ? renderResponse.getNamespace() + "selectDistributionScope(this.value);" : "" %>' showEmptyOption="<%= true %>">
 	<c:if test="<%= permissionChecker.isOmniadmin() %>">
+
+		<%
+			hasDistributionScope = true;
+		%>
+
 		<aui:option label="general" selected="<%= (classNameId == 0) && (classPK == 0) %>" value="0,0" />
 	</c:if>
 
@@ -29,6 +37,7 @@
 			<%
 			for (Group group : groups) {
 				if ((group.isOrganization() || (group.isRegularSite() && group.isSite())) && GroupPermissionUtil.contains(permissionChecker, group.getGroupId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
+					hasDistributionScope = true;
 			%>
 
 					<aui:option label="<%= HtmlUtil.escape(group.getDescriptiveName(locale)) %>" selected="<%= classPK == group.getGroupId() %>" value="<%= PortalUtil.getClassNameId(Group.class) + StringPool.COMMA + group.getGroupId() %>" />
@@ -51,6 +60,7 @@
 			<%
 			for (Organization organization : organizations) {
 				if (OrganizationPermissionUtil.contains(permissionChecker, organization.getOrganizationId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
+					hasDistributionScope = true;
 			%>
 
 					<aui:option label="<%= HtmlUtil.escape(organization.getName()) %>" selected="<%= classPK == organization.getOrganizationId() %>" value="<%= PortalUtil.getClassNameId(Organization.class) + StringPool.COMMA + organization.getOrganizationId() %>" />
@@ -73,6 +83,7 @@
 			<%
 			for (Role role : roles) {
 				if (RolePermissionUtil.contains(permissionChecker, role.getRoleId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
+					hasDistributionScope = true;
 			%>
 
 					<aui:option label="<%= HtmlUtil.escape(role.getTitle(locale)) %>" selected="<%= classPK == role.getRoleId() %>" value="<%= PortalUtil.getClassNameId(Role.class) + StringPool.COMMA + role.getRoleId() %>" />
@@ -95,6 +106,7 @@
 			<%
 			for (UserGroup userGroup : userGroups) {
 				if (UserGroupPermissionUtil.contains(permissionChecker, userGroup.getUserGroupId(), ActionKeys.MANAGE_ANNOUNCEMENTS)) {
+					hasDistributionScope = true;
 			%>
 
 					<aui:option label="<%= HtmlUtil.escape(userGroup.getName()) %>" selected="<%= classPK == userGroup.getUserGroupId() %>" value="<%= PortalUtil.getClassNameId(UserGroup.class) + StringPool.COMMA + userGroup.getUserGroupId() %>" />
@@ -107,3 +119,13 @@
 		</optgroup>
 	</c:if>
 </aui:select>
+
+<%
+	request.setAttribute("hasDistributionScope", hasDistributionScope);
+%>
+
+<aui:script use="aui-base">
+	if (!<%= hasDistributionScope %>) {
+		A.one('#<portlet:namespace />fieldSet').hide();
+	}
+</aui:script>
