--- a/portal-web/docroot/html/portlet/users_admin/view_flat_users.jspf
+++ b/portal-web/docroot/html/portlet/users_admin/view_flat_users.jspf
@@ -211,7 +211,8 @@ if (!ParamUtil.getBoolean(renderRequest, "advancedSearch")) {
 	}
 	else {
 		if (filterManageableOrganizations && !UserPermissionUtil.contains(permissionChecker, ResourceConstants.PRIMKEY_DNE, ActionKeys.VIEW)) {
-			userParams.put("usersOrgs", user.getOrganizationIds());
+			Long[] organizationIds = ArrayUtil.toLongArray(user.getOrganizationIds());
+			userParams.put("usersOrgs", organizationIds);
 		}
 	}
 
