LPS-49367 use "==" instead of "equals"

--- a/portal-web/docroot/wap/themes/mobile/templates/portal_normal.vm
+++ b/portal-web/docroot/wap/themes/mobile/templates/portal_normal.vm
@@ -6,7 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	#if ($site_name.equals($company_name) || $the_title.equals($site_name))
+	#if ($site_name == $company_name || $the_title == $site_name)
 		<title>$the_title - $company_name</title>
 	#else
 		<title>$the_title - $site_name - $company_name</title>
