LPS-113863 Use liferayPortletResponse.getNamespace()

--- a/modules/apps/asset/asset-categories-admin-web/src/main/resources/META-INF/resources/edit_vocabulary_settings.jspf
+++ b/modules/apps/asset/asset-categories-admin-web/src/main/resources/META-INF/resources/edit_vocabulary_settings.jspf
@@ -33,7 +33,7 @@ if (vocabulary != null) {
 <liferay-frontend:fieldset
 	collapsed="<%= true %>"
 	collapsible="<%= true %>"
-	id='<%= renderResponse.getNamespace() + "extraFields" %>'
+	id='<%= liferayPortletResponse.getNamespace() + "extraFields" %>'
 	label="associated-asset-types"
 >
 
