--- a/modules/apps/portal-search/portal-search-web/src/main/resources/META-INF/resources/open_search.jspf
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/META-INF/resources/open_search.jspf
@@ -15,7 +15,7 @@
 --%>
 
 <aui:button-row>
-	<aui:button onClick='<%= renderResponse.getNamespace() + "addSearchProvider();" %>' value='<%= LanguageUtil.format(request, "add-x-as-a-search-provider", HtmlUtil.escape(company.getName()), false) %>' />
+	<aui:button onClick='<%= liferayPortletResponse.getNamespace() + "addSearchProvider();" %>' value='<%= LanguageUtil.format(request, "add-x-as-a-search-provider", HtmlUtil.escape(company.getName()), false) %>' />
 </aui:button-row>
 
 <%
