LPS-115716 Update usage

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-taglib/src/main/resources/META-INF/resources/template_selector/init-ext.jspf
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-taglib/src/main/resources/META-INF/resources/template_selector/init-ext.jspf
@@ -15,7 +15,7 @@
 --%>
 
 <%@ page import="com.liferay.dynamic.data.mapping.model.DDMTemplate" %><%@
-page import="com.liferay.dynamic.data.mapping.model.DDMTemplateConstants" %><%@
+page import="com.liferay.dynamic.data.mapping.model.constants.DDMTemplateConstants" %><%@
 page import="com.liferay.dynamic.data.mapping.service.DDMTemplateLocalServiceUtil" %><%@
 page import="com.liferay.dynamic.data.mapping.taglib.internal.security.permission.resource.DDMTemplatePermission" %><%@
 page import="com.liferay.dynamic.data.mapping.taglib.internal.util.PortletDisplayTemplateUtil" %><%@
