LPS-105380 Auto SF

--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-cookie-banner/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-cookie-banner/index.html
@@ -1,5 +1,5 @@
 <div class="cookie-banner ${configuration.fixedStyle}">
-	<div class="container col-12 col-md-8 col-xl-6 mx-auto text-center py-4">
+	<div class="col-12 col-md-8 col-xl-6 container mx-auto py-4 text-center">
 		<div>
 			<p class="mb-3" data-lfr-editable-id="01-text" data-lfr-editable-type="rich-text">
 				This website uses cookies to ensure you get the best experience.
@@ -8,7 +8,7 @@
 		  	</p>
 		</div>
 
-		<a class="btn btn-secondary btn-sm bootcamp-button cookie-banner-button" data-lfr-editable-id="02-link" data-lfr-editable-type="link" href="" id="fragment-${fragmentEntryLinkNamespace}-03-link">
+		<a class="bootcamp-button btn btn-secondary btn-sm cookie-banner-button" data-lfr-editable-id="02-link" data-lfr-editable-type="link" href="" id="fragment-${fragmentEntryLinkNamespace}-03-link">
 			Accept
 		</a>
 	</div>
