--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-footer/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-footer/index.html
@@ -2,15 +2,15 @@
 	publicFriendlyURL = themeDisplay.getPathFriendlyURLPublic() + themeDisplay.getSiteGroup().getFriendlyURL()
 /]
 
-<nav class="bootcamp-footer py-4 pb-lg-8">
+<nav class="bootcamp-footer pb-lg-8 py-4">
 	<div class="align-items-center bootcamp-footer-border row">
 		<div class="col-12 col-lg">
-			<a class="site-logo d-inline-flex" href="${publicFriendlyURL}">
+			<a class="d-inline-flex site-logo" href="${publicFriendlyURL}">
 				<img alt="" class="navbar-logo" data-lfr-editable-id="imageLogoFooter" data-lfr-editable-type="image" src="[resources:bootcamp_logo.svg]" width="140" />
 			</a>
 		</div>
 
-		<div class="col-12 col-lg-auto small py-3 py-lg-0">
+		<div class="col-12 col-lg-auto py-3 py-lg-0 small">
 			<lfr-widget-nav></lfr-widget-nav>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 			</small>
 		</div>
 
-		<div class="col-12 col-lg-auto bootcamp-footer-social">
+		<div class="bootcamp-footer-social col-12 col-lg-auto">
 			<a class="btn btn-monospaced btn-sm" data-lfr-editable-id="socialInstagramLink" data-lfr-editable-type="link" href="#">
 				<img alt="Instagram link" data-lfr-editable-id="socialInstagram" data-lfr-editable-type="image" src="[resources:social_icon_instagram.svg]" />
 			</a>
