--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-hero/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-hero/index.html
@@ -1,5 +1,5 @@
 <div class="hero">
-	<div class="row align-items-center">
+	<div class="align-items-center row">
 		<div class="col-6">
 			<img alt="" class="hero__image img-fluid" data-lfr-editable-id="hero-image" data-lfr-editable-type="image" src="[resources:bootcamp_hero.jpg]" />
 		</div>
