--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-sign-in/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-sign-in/index.html
@@ -17,7 +17,7 @@
 		</a>
 
 		<form class="sign-in-form">
-			<p class="sign-in-text mb-5 h2 font-weight-normal">
+			<p class="font-weight-normal h2 mb-5 sign-in-text">
 				Organically grow a disruptive innovation and workplace.
 			</p>
 
@@ -35,7 +35,7 @@
 				<input class="form-control" id="exampleInputPassword1" type="password" />
 			</div>
 
-			<div class="mb-5 form-check">
+			<div class="form-check mb-5">
 				<input class="form-check-input" id="exampleCheck1" type="checkbox" />
 
 				<label class="form-check-label" for="exampleCheck1">
