--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-user/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-user/index.html
@@ -10,7 +10,7 @@
 	[#assign publicSiteNavbarClass = "logged-in" /]
 [/#if]
 
-			<ul class="navbar-nav bootcamp-navbar-user">
+			<ul class="bootcamp-navbar-user navbar-nav">
 				[#if themeDisplay.isSignedIn()]
 					<li class="dropdown">
 						<a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle nav-link p-0" data-toggle="liferay-dropdown" id="${fragmentEntryLinkNamespace}_dropdown_menu" type="button">
