--- a/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
+++ b/modules/apps/site-initializer/site-initializer-bootcamp/src/main/zippableResources/fragments/fragments/bootcamp-video-player/index.html
@@ -5,9 +5,9 @@
 		</button>
 
 		<div class="col">
-			<video class="courses-video w-100 position-relative" controls="controls" preload="auto" src="" />
+			<video class="courses-video position-relative w-100" controls="controls" preload="auto" src="" />
 
-			<button class="play btn-unstyled">
+			<button class="btn-unstyled play">
 				<img alt="Play" src="[resources:bootcamp_play.svg]" width="120" />
 			</button>
 		</div>
@@ -15,15 +15,15 @@
 		<div class="col-md-3 col-to-hide pt-4 px-0">
 			<h6 class="ml-5 mb-4 font-weight-bold">Course Content</h6>
 
-			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-1" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-play btn-unstyled pl-5 pr-4 py-2" data-lfr-editable-id="video-1" data-lfr-editable-type="link" href="">
 				Module 1 Name
 			</a>
 
-			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-2" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-play btn-unstyled pl-5 pr-4 py-2" data-lfr-editable-id="video-2" data-lfr-editable-type="link" href="">
 				Module 2 Name
 			</a>
 
-			<a class="btn btn-block btn-unstyled btn-play py-2 pl-5 pr-4" data-lfr-editable-id="video-3" data-lfr-editable-type="link" href="">
+			<a class="btn btn-block btn-play btn-unstyled pl-5 pr-4 py-2" data-lfr-editable-id="video-3" data-lfr-editable-type="link" href="">
 				Module 3 Name
 			</a>
 		</div>
