--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/business-home-cover/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/business-home-cover/index.html
@@ -3,7 +3,7 @@
 
 <div class="business-home-cover">
 	<div class="container position-relative">
-		<div class="business-home-cover-box mb-0 py-6 px-5">
+		<div class="business-home-cover-box mb-0 px-5 py-6">
 			<div class="business-home-cover-box-title">
 			<span class="title-highlight" data-lfr-editable-id="business-home-cover-title" data-lfr-editable-type="text">More than Insurance.</span>
 			<span data-lfr-editable-id="business-home-cover-title2" data-lfr-editable-type="text">We partner with your business.</span>
@@ -24,13 +24,13 @@
 						<div class="d-flex position-relative">
 						<label for="email" class="position-absolute bg-white px-1">Email Address</label>
 
-						<input class="rounded px-3" id="email" name="email" type="text" />
+						<input class="px-3 rounded" id="email" name="email" type="text" />
 						</div>
 
 					<button button class="btn btn-sm btn-primary ml-4" type="submit">
-						<span class="action-button-text font-weight-bold d-flex align-items-center" id="continue-quote">
+						<span class="action-button-text align-items-center d-flex font-weight-bold" id="continue-quote">
 								CONTINUE QUOTE
-							<svg class="lexicon-icon lexicon-icon-angle-right ml-2 arrow-icon" focusable="false" role="presentation">
+							<svg class="arrow-icon lexicon-icon lexicon-icon-angle-right ml-2" focusable="false" role="presentation">
 								<use xlink:href="${clayIconSVG}#angle-right" />
 								</svg>
 							</span>
@@ -48,11 +48,11 @@
 				</div>
 
 				<div class="position-relative" id="retrieve-quote">
-					<form class="d-flex align-items-start" id="get-quote-form">
+					<form class="align-items-start d-flex" id="get-quote-form">
 						<div id="zip-container">
 						<label for="zip" class="position-absolute bg-white px-1">Zip</label>
 
-						<input class="rounded px-3 w-100" id="zip" maxlength="5" name="zip" placeholder="Zip" type="text" />
+						<input class="px-3 rounded w-100" id="zip" maxlength="5" name="zip" placeholder="Zip" type="text" />
 
 							<div class="error-feedback">
 								<span>Enter a valid 5 digit Zip</span>
@@ -66,7 +66,7 @@
 								<use xlink:href="${clayIconSVG}#caret-bottom" />
 							</svg>
 
-						<select class="rounded px-3 bg-white" id="product" name="product" />
+						<select class="bg-white px-3 rounded" id="product" name="product" />
 
 							<div class="error-feedback">
 								<span>Please select a product</span>
@@ -76,7 +76,7 @@
 					<button button class="btn btn-sm btn-primary ml-4" type="submit">
 							<span class="action-button-text">
 								GET A QUOTE
-							<svg class="lexicon-icon lexicon-icon-angle-right ml-2 arrow-icon" focusable="false" role="presentation">
+							<svg class="arrow-icon lexicon-icon lexicon-icon-angle-right ml-2" focusable="false" role="presentation">
 								<use xlink:href="${clayIconSVG}#angle-right" />
 								</svg>
 							</span>
