--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/claim-steps/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/claim-steps/index.html
@@ -1,6 +1,6 @@
 <h4 class="claim-steps-title mb-4">Claim Status</h4>
 
-<ul class="list-unstyled icon-list">
+<ul class="icon-list list-unstyled">
 	<li class="claim-step">
 		<img alt="" class="claim-step-image" data-lfr-editable-id="Status Image 01" data-lfr-editable-type="image" src="[resources:open.svg]" />
 
