--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-actions/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-actions/index.html
@@ -1,5 +1,5 @@
-<div class="container congrats-actions">
-	<button class="btn btn-ghost btn-variant-primary btn-lg ml-3">
+<div class="congrats-actions container">
+	<button class="btn btn-ghost btn-lg btn-variant-primary ml-3">
 		VIEW POLICY DETAILS
 	</button>
 
