--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-information/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/congrats-information/index.html
@@ -1,4 +1,4 @@
-<div class="container congrats-information">
+<div class="congrats-information container">
 	<div class="hide">
 		<img id="check" src="[resources:blue_check.svg]" />
 
