--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/get-in-touch/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/get-in-touch/index.html
@@ -20,7 +20,7 @@
 				Call an Agent
 			</h3>
 
-		<button class="btn-content-agent btn-call-color" id="contact-agent-btn-call">
+		<button class="btn-call-color btn-content-agent" id="contact-agent-btn-call">
 			<span data-lfr-editable-id="contact-agent-btn-call" data-lfr-editable-type="text" id="value-number-call">
 					1 (800) 555-5555
 				</span>
@@ -65,7 +65,7 @@
 		</div>
 	</div>
 
-	<div class="row content-agent-margin">
+	<div class="content-agent-margin row">
 		<div class="col-12">
 		<b class="content-agent-text-your-application" id="content-agent-text-your-application">Your Application #WLM-RNK-ANF</b>
 		</div>
@@ -73,7 +73,7 @@
 
 	<div class="row">
 		<div class="col-12">
-		<button class="btn-content-agent btn-back-color" id="contact-agent-btn-back">
+		<button class="btn-back-color btn-content-agent" id="contact-agent-btn-back">
 				<img alt="back button" src="[resources:icon_left.svg]" />
 
 			<span data-lfr-editable-id="contact-agent-btn-back" data-lfr-editable-type="text">
