--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/gift/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/gift/index.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center">
+<div class="align-items-center row">
 	<div class="col-7">
 		<div class="lead mt-3 mb-3">Refer a friend and get a $100 credit for your next renewal.</div>
 
