--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/page-header/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/page-header/index.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<div class="container align-items-center">
+	<div class="align-items-center container">
 		<div class="welcome-message">
 			<div class="page-header-title mb-2"><span class="font-weight-bolder" data-lfr-editable-id="Name" data-lfr-editable-type="text">
 				Hi David.</span> I hope you're well.
