--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/private-footer/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/private-footer/index.html
@@ -1,7 +1,7 @@
 <div class="footer private-footer">
 	<div class="container">
 		<div class="footer-bottom">
-			<ul class="nav flex-row footer-nav align-items-center">
+			<ul class="align-items-center flex-row footer-nav nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#"><img class="footer-logo" src="[resources:logo_inv.svg]" alt="" /></a>
 				</li>
@@ -16,7 +16,7 @@
 				</li>
 			</ul>
 
-			<ul class="nav footer-nav flex-row">
+			<ul class="flex-row footer-nav nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#" data-lfr-editable-id="Social01" data-lfr-editable-type="image"><img src="[resources:instagram.svg]" alt="" /></a>
 				</li>
