--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/private-navbar/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/private-navbar/index.html
@@ -3,7 +3,7 @@
 	publicFriendlyURL = themeDisplay.getPathFriendlyURLPublic() + themeDisplay.getSiteGroup().getFriendlyURL()
 /]
 
-<nav class="navbar navbar-expand-lg insured-portal-navbar">
+<nav class="insured-portal-navbar navbar navbar-expand-lg">
 	<div class="container">
 		<a class="navbar-brand" href="${publicFriendlyURL}">
 			<img alt="" class="navbar-logo" data-lfr-editable-id="image-logo" data-lfr-editable-type="image" loading="lazy" src="[resources:logo_inv.svg]" />
