--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/product-content/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/product-content/index.html
@@ -12,7 +12,7 @@
 	<div class="product-detail-section">
 		<h4 class="product-detail-section-title">Summary</h4>
 
-		<div class="product-detail-section-group-text claim-summary" data-lfr-editable-id="Summary" data-lfr-editable-type="text">
+		<div class="claim-summary product-detail-section-group-text" data-lfr-editable-id="Summary" data-lfr-editable-type="text">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur felis ligula, efficitur et cursus quis, blandit sit amet dolor. Sed rutrum, quam tincidunt pharetra vehicula, odio sem finibus lacus, eu hendrerit mauris elit eu velit. Aliquam fermentum ex id hendrerit posuere. Sed in posuere dui, at dapibus nibh. Proin finibus pellentesque nibh at laoreet.</div>
 	</div>
 
