--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/public-navbar/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/public-navbar/index.html
@@ -5,10 +5,10 @@ themeDisplay.getSiteGroup().getFriendlyURL() /]
 
 <nav class="navbar navbar-expand-lg navbar-light public-site-navbar">
 	<div class="container d-block">
-		<div class="d-flex align-items-center">
-			<div class="d-flex align-items-center flex-grow-1">
+		<div class="align-items-center d-flex">
+			<div class="align-items-center d-flex flex-grow-1">
 				<a class="navbar-brand" href="${publicFriendlyURL}">
-				<img alt="" class="navbar-logo d-inline-block align-top" data-lfr-editable-id="image-logo" data-lfr-editable-type="image" loading="lazy" src="[resources:raylife_logo.svg]" />
+				<img alt="" class="align-top d-inline-block navbar-logo" data-lfr-editable-id="image-logo" data-lfr-editable-type="image" loading="lazy" src="[resources:raylife_logo.svg]" />
 				</a>
 
 			<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
