--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/section-subscription/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/section-subscription/index.html
@@ -9,7 +9,7 @@
 		</div>
 
 		<form class="form-inline section-subscription-form">
-			<div class="form-group mx-sm-3 mb-2">
+			<div class="form-group mb-2 mx-sm-3">
 				<label for="inputPassword2" class="sr-only">Password</label>
 
 				<input class="form-control form-control-lg" id="inputPassword2" placeholder="Enter your email address *" type="password" />
