--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/sign-in/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/sign-in/index.html
@@ -9,7 +9,7 @@
 [/#if]
 
 <div class="sign-in vh-100">
-	<div class="row no-gutters h-100">
+	<div class="h-100 no-gutters row">
 		<div class="col-6 col-lg-5 form-column">
 			<div class="sign-in-form">
 				<a href="#" data-lfr-editable-id="home" data-lfr-editable-type="link"><img class="sign-in-logo" src="[resources:logo_inv.svg]" alt="" /></a>
