--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/table/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/table/index.html
@@ -1,4 +1,4 @@
-<table class="table table-hover raylife-table">
+<table class="raylife-table table table-hover">
 	<thead>
 		<tr>
 			<th scope="col">Name</th>
