--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/product-resources/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/product-resources/index.html
@@ -1,7 +1,7 @@
 <div class="product-resources">
 	<h4 class="product-resources-title">Resources</h4>
 
-	<ul class="list-unstyled icon-list">
+	<ul class="icon-list list-unstyled">
 		<li><img src="[resources:headphones.svg]" alt="" />Raylife Personal Assistant</li>
 		<li><img src="[resources:tool.svg]" alt="" />Car Workshop Guide</li>
 		<li><img src="[resources:dollar_sign.svg]" alt="" />Coverage Calculator</li>
