--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/public-footer/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/public-footer/index.html
@@ -5,7 +5,7 @@
 			<div class="col-2">
 				<h6 class="footer-list-title">Products</h6>
 
-				<ul class="nav flex-column footer-nav">
+				<ul class="flex-column footer-nav nav">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Auto</a>
 					</li>
@@ -30,7 +30,7 @@
 			<div class="col-2">
 				<h6 class="footer-list-title">Claims</h6>
 
-				<ul class="nav flex-column footer-nav">
+				<ul class="flex-column footer-nav nav">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Submit a Claim</a>
 					</li>
@@ -46,7 +46,7 @@
 			<div class="col-2">
 				<h6 class="footer-list-title">For Brokers</h6>
 
-				<ul class="nav flex-column footer-nav">
+				<ul class="flex-column footer-nav nav">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Broker Login</a>
 					</li>
@@ -62,7 +62,7 @@
 			<div class="col-2">
 				<h6 class="footer-list-title">Our Company</h6>
 
-				<ul class="nav flex-column footer-nav">
+				<ul class="flex-column footer-nav nav">
 					<li class="nav-item">
 						<a class="nav-link" href="#">About Us</a>
 					</li>
@@ -83,7 +83,7 @@
 		</div>
 
 		<div class="footer-bottom">
-			<ul class="nav flex-row footer-nav">
+			<ul class="flex-row footer-nav nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#">Accesibility</a>
 				</li>
@@ -95,7 +95,7 @@
 				</li>
 			</ul>
 
-			<ul class="nav footer-nav flex-row">
+			<ul class="flex-row footer-nav nav">
 				<li class="nav-item">
 					<a class="nav-link" href="#"><img src="[resources:instagram.svg]" alt="" /></a>
 				</li>
