--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/quote-navbar/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/quote-navbar/index.html
@@ -4,9 +4,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light quote-site-navbar">
 	<div class="container">
-		<div class="navbar-brand flex-grow-1">
+		<div class="flex-grow-1 navbar-brand">
 			<a href="${publicFriendlyURL}">
-				<img alt="" class="navbar-logo d-inline-block align-top" data-lfr-editable-id="image-logo" data-lfr-editable-type="image" loading="lazy" src="[resources:raylife_logo.svg]" />
+				<img alt="" class="align-top d-inline-block navbar-logo" data-lfr-editable-id="image-logo" data-lfr-editable-type="image" loading="lazy" src="[resources:raylife_logo.svg]" />
 			</a>
 		</div>
 
